// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated output snapshots > claude-code output matches snapshot 1`] = `
"## Project Overview

**Project:** test-project
**Managed by:** [Codi](https://github.com/lehidalgo/codi)

## Permissions

Shell commands are allowed.
Keep source code files under 700 lines. Documentation files have no line limit.
Do NOT use force push (--force) on git operations.

## Development Notes

- Force push is not allowed

## Workflow

### Before Writing Code
1. **Understand** the request — read related code and ask clarifying questions
2. **Search** the codebase for existing solutions before creating new ones
3. **Propose** the approach and wait for confirmation before executing

### Self-Evaluation Checklist
Before proceeding with any solution, verify:
- **Security**: Does this introduce vulnerabilities?
- **Performance**: Will this cause bottlenecks or latency issues?
- **Scalability**: Will this work at 10x, 100x scale?
- **Cost**: Does this optimize for resource efficiency?

### Commit Discipline
- Never commit or deploy without human approval and all errors fixed
- Break work into atomic, reviewable changes

<!-- Generated by Codi | Do not edit — run: codi generate -->
"
`;

exports[`generated output snapshots > cline output matches snapshot 1`] = `
"## Project Overview

**Project:** test-project
**Managed by:** [Codi](https://github.com/lehidalgo/codi)

Shell commands are allowed.
Keep source code files under 700 lines. Documentation files have no line limit.
Do NOT use force push (--force) on git operations.

## RESTRICTIONS (ENFORCED)

BLOCKED: git push --force (or -f) — force push is disabled by project policy

## Development Notes

- Force push is not allowed

## Workflow

### Before Writing Code
1. **Understand** the request — read related code and ask clarifying questions
2. **Search** the codebase for existing solutions before creating new ones
3. **Propose** the approach and wait for confirmation before executing

### Self-Evaluation Checklist
Before proceeding with any solution, verify:
- **Security**: Does this introduce vulnerabilities?
- **Performance**: Will this cause bottlenecks or latency issues?
- **Scalability**: Will this work at 10x, 100x scale?
- **Cost**: Does this optimize for resource efficiency?

### Commit Discipline
- Never commit or deploy without human approval and all errors fixed
- Break work into atomic, reviewable changes

## Skill Routing

| Skill | When to use |
|-------|-------------|
| review | Code review skill |

# Code Style

Use 2-space indentation and single quotes.

# Skill: review

Review all code changes for quality.

<!-- Generated by Codi | Do not edit — run: codi generate -->
"
`;

exports[`generated output snapshots > codex output matches snapshot 1`] = `
"## Project Overview

**Project:** test-project
**Managed by:** [Codi](https://github.com/lehidalgo/codi)

## Permissions

Shell commands are allowed.
Keep source code files under 700 lines. Documentation files have no line limit.
Do NOT use force push (--force) on git operations.

## Skill Routing

| Skill | When to use |
|-------|-------------|
| review | Code review skill |

## Development Notes

- Force push is not allowed

## Workflow

### Before Writing Code
1. **Understand** the request — read related code and ask clarifying questions
2. **Search** the codebase for existing solutions before creating new ones
3. **Propose** the approach and wait for confirmation before executing

### Self-Evaluation Checklist
Before proceeding with any solution, verify:
- **Security**: Does this introduce vulnerabilities?
- **Performance**: Will this cause bottlenecks or latency issues?
- **Scalability**: Will this work at 10x, 100x scale?
- **Cost**: Does this optimize for resource efficiency?

### Commit Discipline
- Never commit or deploy without human approval and all errors fixed
- Break work into atomic, reviewable changes

## Code Style

Use 2-space indentation and single quotes.

<!-- Generated by Codi | Do not edit — run: codi generate -->
"
`;

exports[`generated output snapshots > copilot output matches snapshot 1`] = `
"## Project Overview

**Project:** test-project
**Managed by:** [Codi](https://github.com/lehidalgo/codi)

Shell commands are allowed.
Keep source code files under 700 lines. Documentation files have no line limit.
Do NOT use force push (--force) on git operations.

## RESTRICTIONS (ENFORCED)

BLOCKED: git push --force (or -f) — force push is disabled by project policy

## Development Notes

- Force push is not allowed

## Workflow

### Before Writing Code
1. **Understand** the request — read related code and ask clarifying questions
2. **Search** the codebase for existing solutions before creating new ones
3. **Propose** the approach and wait for confirmation before executing

### Self-Evaluation Checklist
Before proceeding with any solution, verify:
- **Security**: Does this introduce vulnerabilities?
- **Performance**: Will this cause bottlenecks or latency issues?
- **Scalability**: Will this work at 10x, 100x scale?
- **Cost**: Does this optimize for resource efficiency?

### Commit Discipline
- Never commit or deploy without human approval and all errors fixed
- Break work into atomic, reviewable changes

## Skill Routing

| Skill | When to use |
|-------|-------------|
| review | Code review skill |

# Code Style

Use 2-space indentation and single quotes.

# Skill: review

Review all code changes for quality.

<!-- Generated by Codi | Do not edit — run: codi generate -->
"
`;

exports[`generated output snapshots > cursor output matches snapshot 1`] = `
"## Project Overview

**Project:** test-project
**Managed by:** [Codi](https://github.com/lehidalgo/codi)

Shell commands are allowed.
Keep source code files under 700 lines. Documentation files have no line limit.
Do NOT use force push (--force) on git operations.

## Development Notes

- Force push is not allowed

## Workflow

### Before Writing Code
1. **Understand** the request — read related code and ask clarifying questions
2. **Search** the codebase for existing solutions before creating new ones
3. **Propose** the approach and wait for confirmation before executing

### Self-Evaluation Checklist
Before proceeding with any solution, verify:
- **Security**: Does this introduce vulnerabilities?
- **Performance**: Will this cause bottlenecks or latency issues?
- **Scalability**: Will this work at 10x, 100x scale?
- **Cost**: Does this optimize for resource efficiency?

### Commit Discipline
- Never commit or deploy without human approval and all errors fixed
- Break work into atomic, reviewable changes

## Skill Routing

| Skill | When to use |
|-------|-------------|
| review | Code review skill |

<!-- Generated by Codi | Do not edit — run: codi generate -->
"
`;

exports[`generated output snapshots > windsurf output matches snapshot 1`] = `
"## Project Overview

**Project:** test-project
**Managed by:** [Codi](https://github.com/lehidalgo/codi)

Shell commands are allowed.
Keep source code files under 700 lines. Documentation files have no line limit.
Do NOT use force push (--force) on git operations.

## RESTRICTIONS (ENFORCED)

BLOCKED: git push --force (or -f) — force push is disabled by project policy

## Development Notes

- Force push is not allowed

## Workflow

### Before Writing Code
1. **Understand** the request — read related code and ask clarifying questions
2. **Search** the codebase for existing solutions before creating new ones
3. **Propose** the approach and wait for confirmation before executing

### Self-Evaluation Checklist
Before proceeding with any solution, verify:
- **Security**: Does this introduce vulnerabilities?
- **Performance**: Will this cause bottlenecks or latency issues?
- **Scalability**: Will this work at 10x, 100x scale?
- **Cost**: Does this optimize for resource efficiency?

### Commit Discipline
- Never commit or deploy without human approval and all errors fixed
- Break work into atomic, reviewable changes

## Skill Routing

| Skill | When to use |
|-------|-------------|
| review | Code review skill |

# Code Style

Use 2-space indentation and single quotes.

# Skill: review

Review all code changes for quality.

<!-- Generated by Codi | Do not edit — run: codi generate -->
"
`;
